tests/parser/call-expression-right-paren-error.stderr
error: expected ')'
 --> $DIR/call-expression-right-paren-error.lox:1:5
  |
1 | f(5 _;
  |     ^
